# snowflake-rs

./: .env  Cargo.toml  Dockerfile  README.md
docs/: commands.txt
service/: Cargo.toml
snowflake-uid/: Cargo.toml
src/: lib.rs  main.rs
