[package]
name = "id-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
#actix-redis = "0.9.2"
#redis = "0.21.4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.8"
dotenv = "0.15"
failure = "0.1.8"
chrono = "0.4.19"
serde_json = "1.0.72"
lazy_static = "1.4.0"